
bin_PROGRAMS=recode

recode_SOURCES=
recode_SOURCES+=Options.cpp
recode_SOURCES+=PAT.cpp
recode_SOURCES+=PMT.cpp
recode_SOURCES+=TS.cpp
recode_SOURCES+=TSPacket.cpp
recode_SOURCES+=VideoDecoder.cpp
recode_SOURCES+=VideoEncoder.cpp
recode_SOURCES+=main.cpp
recode_SOURCES+=xlog.cpp

recode_LDFLAGS=

